Formatting and line-breaks

--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -31,100 +31,152 @@ All of the above grants are sourced from our [General Fund](https://opensats.org
 
 ---
 
-This marks the fourth wave of grants given to bitcoin projects, following our announcements in [July](https://opensats.org/blog/bitcoin-grants-july-2023), [August](https://opensats.org/blog/bitcoin-and-nostr-grants-august-2023), and [December](https://opensats.org/blog/bitcoin-grants-december-2023). In case you’re interested in the types of projects and people we support, we encourage you to have a look at our [long-term support grants](https://opensats.org/tags/lts) as well as our [year in review](https://opensats.org/blog/2023-year-in-review).
+This marks the fourth wave of grants given to bitcoin projects, following our
+announcements in [July](https://opensats.org/blog/bitcoin-grants-july-2023),
+[August](https://opensats.org/blog/bitcoin-and-nostr-grants-august-2023), and
+[December](https://opensats.org/blog/bitcoin-grants-december-2023). In case
+you’re interested in the types of projects and people we support, we encourage
+you to have a look at our [long-term support
+grants](https://opensats.org/tags/lts) as well as our [year in
+review](https://opensats.org/blog/2023-year-in-review).
 
-As always, let's take a closer look at the projects to understand what they are about and how they align with [our mission](https://opensats.org/mission).
+As always, let's take a closer look at the projects to understand what they are
+about and how they align with [our mission](https://opensats.org/mission).
 
-—
+---
 
 ### Splicing in LDK
 
-Splicing is a Lightning improvement that brings several practical advantages to users and node operators alike, such as more flexible channel management options with lower fees & no downtime. It also allows for better experiences when it comes to using wallets that combine on-chain and lightning payments. The goal of `ldk-splicing` is to add splicing support to LDK in an interoperable and pragmatic way.
+Splicing is a Lightning improvement that brings several practical advantages to
+users and node operators alike, such as more flexible channel management options
+with lower fees & no downtime. It also allows for better experiences when it
+comes to using wallets that combine on-chain and lightning payments. The goal of
+`ldk-splicing` is to add splicing support to LDK in an interoperable and
+pragmatic way.
 
-Repository: [ldksplicing/ldk-splicing](https://github.com/ldksplicing/ldk-splicing)
-
+Repository: [ldksplicing/ldk-splicing](https://github.com/ldksplicing/ldk-splicing)  
 License: Apache 2.0 / MIT
 
 ### Bitcoin Core Testing Suite
 
-The Bitcoin Core Testing Suite aims to increase the coverage and robustness of Bitcoin Core’s testing suite. This will help increase the stability and reliability of the bitcoin-core software and help give developers confidence when working on improvements.
+The Bitcoin Core Testing Suite aims to increase the coverage and robustness of
+Bitcoin Core’s testing suite. This will help increase the stability and
+reliability of the bitcoin-core software and help give developers confidence
+when working on improvements.
 
-Repository: [bitcoin/bitcoin](https://github.com/bitcoin/bitcoin) ([PRs](https://bitcoinacks.com/?flt0_author_contains=kevkevinpal))
-
+Repository: [bitcoin/bitcoin](https://github.com/bitcoin/bitcoin) ([PRs](https://bitcoinacks.com/?flt0_author_contains=kevkevinpal))  
 License: MIT
 
 ### Open-Source Bitcoin LARP Game
 
-The world-famous Bitcoin LARP is a game designed to understand the inner workings of Bitcoin in a fun and interactive way. The goal of this project is to have open-source kits available to anyone that are easy to replicate, use, and set up.
+The world-famous Bitcoin LARP is a game designed to understand the inner
+workings of Bitcoin in a fun and interactive way. The goal of this project is to
+have open-source kits available to anyone that are easy to replicate, use, and
+set up.
 
-Beyond just software and optimizing for the ability to make kits easy to build & distribute, all instructions and build kit information will be made available under permissive open-source licenses too.
+Beyond just software and optimizing for the ability to make kits easy to build &
+distribute, all instructions and build kit information will be made available
+under permissive open-source licenses too.
 
-Repository: [niftynei/BASIC](https://github.com/niftynei/BASIC)
-
+Repository: [niftynei/BASIC](https://github.com/niftynei/BASIC)  
 License: GPL 3.0
 
 ### Satsigner
 
-Satsigner is a mobile wallet that aims to give the user full control and visibility over what is happening to their sats at the protocol level. Most bitcoin wallets in use today use traditional designs and patterns that hide the underlying mechanics of the bitcoin protocol. While this trade-off might be appropriate for new users, failing to equip users with more meaningful and in-depth interfaces can hinder the acquisition of a deeper understanding of bitcoin. By focusing on the user experience problems from a bitcoiner’s perspective, the project hopes to develop native solutions for UTXO, fee, multisig, and key management.
+Satsigner is a mobile wallet that aims to give the user full control and
+visibility over what is happening to their sats at the protocol level. Most
+bitcoin wallets in use today use traditional designs and patterns that hide the
+underlying mechanics of the bitcoin protocol. While this trade-off might be
+appropriate for new users, failing to equip users with more meaningful and
+in-depth interfaces can hinder the acquisition of a deeper understanding of
+bitcoin. By focusing on the user experience problems from a bitcoiner’s
+perspective, the project hopes to develop native solutions for UTXO, fee,
+multisig, and key management.
 
-Repository: [satsigner/satsigner](https://github.com/satsigner/satsigner)
-
+Repository: [satsigner/satsigner](https://github.com/satsigner/satsigner)  
 License: MIT
 
 ### The Bitaxe
 
-The Bitaxe is the first ASIC bitcoin miner in nearly a decade with fully open-source hardware and firmware. The primary goal is to be a reference design that can be taken as is, scaled up, and/or adapted to solve specific bitcoin mining use cases. The design takes into consideration cost and ease of access to core components while remaining a competitive miner.
+The Bitaxe is the first ASIC bitcoin miner in nearly a decade with fully
+open-source hardware and firmware. The primary goal is to be a reference design
+that can be taken as is, scaled up, and/or adapted to solve specific bitcoin
+mining use cases. The design takes into consideration cost and ease of access to
+core components while remaining a competitive miner.
 
-Documentation on how to manufacture the device, program the firmware, and contribute is central to the project.
+Documentation on how to manufacture the device, program the firmware, and
+contribute is central to the project.
 
-Repository: [skot/bitaxe](https://github.com/skot/bitaxe)
-
+Repository: [skot/bitaxe](https://github.com/skot/bitaxe)  
 License: GPL 3.0
 
 ### Scaling Lightning
 
-Scaling Lightning is a framework for creating and interacting with test lightning networks. The project aims to provide a realistic lightning network environment for developers to build and develop their applications and services. Similar in concept to testnet faucets, `scaling-lightning` is a great tool for experimentation and learning.
+Scaling Lightning is a framework for creating and interacting with test
+lightning networks. The project aims to provide a realistic lightning network
+environment for developers to build and develop their applications and services.
+Similar in concept to testnet faucets, `scaling-lightning` is a great tool for
+experimentation and learning.
 
-Easy routing allows individuals and companies to experiment and run signet nodes. An optional public API can allow participants to request interaction with a 3rd party's signet node such as to ask it to open a channel for you.
+Easy routing allows individuals and companies to experiment and run signet
+nodes. An optional public API can allow participants to request interaction with
+a 3rd party's signet node such as to ask it to open a channel for you.
 
-Repository: [scaling-lightning/scaling-lightning](https://github.com/scaling-lightning/scaling-lightning)
-
+Repository: [scaling-lightning/scaling-lightning](https://github.com/scaling-lightning/scaling-lightning)  
 License: MIT
 
 ### Braidpool
 
-Braidpool is a decentralized bitcoin mining pool. Braidpool aims to ship an implementation working on signet with hashrate donated by interested miners. The project will also publish their specifications and engage the mining community for wider adoption of Braidpool.
+Braidpool is a decentralized bitcoin mining pool. Braidpool aims to ship an
+implementation working on signet with hashrate donated by interested miners. The
+project will also publish their specifications and engage the mining community
+for wider adoption of Braidpool.
 
-The Braidpool proposal builds upon Schnorr signatures and Taproot, as well as novel peer-to-peer research. Braidpool enables all miners to do their own block construction and miner payouts can not be blocked by a central authority like a pool operator.
+The Braidpool proposal builds upon Schnorr signatures and Taproot, as well as
+novel peer-to-peer research. Braidpool enables all miners to do their own block
+construction and miner payouts can not be blocked by a central authority like a
+pool operator.
 
-Repository: [pool2win/braidpool](https://github.com/pool2win/braidpool/)
-
+Repository: [pool2win/braidpool](https://github.com/pool2win/braidpool/)  
 License: MIT
 
 ### Firebolt
 
-Firebolt is a wallet that supports both on-chain and lightning transactions. It runs a custom non-routing Lightning node on the user’s mobile device and integrates with your nostr contacts. Firebolt is fully non-custodial, supports CoinJoin and PayJoin transactions, and integrates with peer-to-peer marketplaces such as Bisq, Peach, and RoboSats.
+Firebolt is a wallet that supports both on-chain and lightning transactions. It
+runs a custom non-routing Lightning node on the user’s mobile device and
+integrates with your nostr contacts. Firebolt is fully non-custodial, supports
+CoinJoin and PayJoin transactions, and integrates with peer-to-peer marketplaces
+such as Bisq, Peach, and RoboSats.
 
 The wallet is still in beta and under heavy development. Use with caution.
 
-Repository: [AreaLayer/FireBolt](https://github.com/AreaLayer/FireBolt)
-
+Repository: [AreaLayer/FireBolt](https://github.com/AreaLayer/FireBolt)  
 License: MIT
 
 ### BLAST
 
-The “Big Lightning Automated Simulation Tool” (BLAST) is a modeling and simulation framework specifically designed for the Lightning Network. Acting as both a software library and a standalone tool, BLAST aims to facilitate the creation of accurate tests and simulations that replicate real-world Lightning Network behavior.
+The “Big Lightning Automated Simulation Tool” (BLAST) is a modeling and
+simulation framework specifically designed for the Lightning Network. Acting as
+both a software library and a standalone tool, BLAST aims to facilitate the
+creation of accurate tests and simulations that replicate real-world Lightning
+Network behavior.
 
-The primary objective of this project is to conduct research and development to devise an efficient representation of nodes and channels. This representation will enable the modeling of large networks while offering flexibility to customize necessary assumptions.
+The primary objective of this project is to conduct research and development to
+devise an efficient representation of nodes and channels. This representation
+will enable the modeling of large networks while offering flexibility to
+customize necessary assumptions.
 
-Repository: [bjohnson5/blast](https://github.com/bjohnson5/blast)
-
+Repository: [bjohnson5/blast](https://github.com/bjohnson5/blast)  
 License: GPL 3.0
 
-We are evaluating applications based on carefully [defined criteria](https://opensats.org/apply#criteria) and we do our best to select only the [most impactful](https://opensats.org/selection) and promising proposals.
+We are evaluating applications based on carefully [defined
+criteria](https://opensats.org/apply#criteria) and we do our best to select only
+the [most impactful](https://opensats.org/selection) and promising proposals.
 
-Thank you for your continual and generous support. As we don't take a cut from donations to open-source projects, we couldn't be doing what we are doing without your help. If you want to help us cover our operational expenses, please consider donating to our [operations budget](https://opensats.org/projects/opensats_operations_budget).
+Thank you for your continual and generous support. As we don't take a cut from
+donations to open-source projects, we couldn't be doing what we are doing
+without your help. If you want to help us cover our operational expenses, please
+consider donating to our [operations
+budget](https://opensats.org/projects/opensats_operations_budget).
 
-<center>
-    <DonateToOperationsButton/>
-</center>
+<center> <DonateToOperationsButton/> </center>
