--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -8,9 +8,16 @@ images: ['/static/images/blog/17-bitcoin-dec.jpg']
 summary: "OpenSats is funding 10 more open-source projects in the bitcoin space."
 ---
 
-As Bitcoin is approaching its next halving event, developers all over the world are working tirelessly to bring about a better future promised by sound and permissionless money. We are trying our best to help bring said future about by providing no-strings-attached funding for the most impactful open-source projects in the Bitcoin ecosystem, and we are planning to do this for many [more](https://opensats.org/blog/recurring-donations-from-bitwise-bitcoin-etf-bitb)  [decades](https://opensats.org/blog/bitcoin-infrastructure-this-decade) to come.
+As Bitcoin is approaching its next halving event, developers all over the world
+are working tirelessly to bring about a better future promised by sound and
+permissionless money. We are trying our best to help bring said future about by
+providing no-strings-attached funding for the most impactful open-source
+projects in the Bitcoin ecosystem, and we are planning to do this for many
+[more](https://opensats.org/blog/recurring-donations-from-bitwise-bitcoin-etf-bitb)
+[decades](https://opensats.org/blog/bitcoin-infrastructure-this-decade) to come.
 
-Our board has selected nine more projects for funding. In no particular order, here they are:
+Our board has selected nine more projects for funding. In no particular order,
+here they are:
 
 - [Splicing in LDK](#splicing-in-ldk)
 - [Bitcoin Core Testing Suite](#bitcoin-core-testing-suite)
@@ -22,8 +29,10 @@ Our board has selected nine more projects for funding. In no particular order, h
 - [Firebolt](#firebolt)
 - [BLAST](#blast)
 
-
-All of the above grants are sourced from our [General Fund](https://opensats.org/projects/general_fund), which is funded by generous donors like you. If you want to help us support free and open-source projects please consider donating to the fund:
+All of the above grants are sourced from our [General
+Fund](https://opensats.org/projects/general_fund), which is funded by generous
+donors like you. If you want to help us support free and open-source projects
+please consider donating to the fund:
 
 <center>
     <DonateToGeneralFundButton/>
