Fix title and date

--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Third Wave of Bitcoin Grants"
-date: '2023-12-18'
+title: "Fourth Wave of Bitcoin Grants"
+date: '2024-02-25'
 tags: ['OpenSats', 'grants', 'bitcoin']
 draft: false
-authors: ['dergigi', 'odell']
+authors: ['BoltC', 'dergigi']
 images: ['/static/images/blog/17-bitcoin-dec.jpg']
-summary: "OpenSats is funding 10 more open-source projects in the bitcoin space."
+summary: "OpenSats is funding 9 more open-source projects in the bitcoin space."
 ---
 
 As Bitcoin is approaching its next halving event, developers all over the world
