--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -3,7 +3,7 @@ title: "Fourth Wave of Bitcoin Grants"
 date: '2024-02-25'
 tags: ['OpenSats', 'grants', 'bitcoin']
 draft: false
-authors: ['BoltC', 'dergigi']
+authors: ['rob', 'dergigi']
 images: ['/static/images/blog/17-bitcoin-dec.jpg']
 summary: "OpenSats is funding 9 more open-source projects in the bitcoin space."
 ---
@@ -21,13 +21,13 @@ here they are:
 
 - [Splicing in LDK](#splicing-in-ldk)
 - [Bitcoin Core Testing Suite](#bitcoin-core-testing-suite)
-- [Open-Source Bitcoin LARP Game](#open-source-bitcoin-larp-game)
-- [Satsigner](#satsigner)
-- [The Bitaxe](#the-bitaxe)
-- [Scaling Lightning](#scaling-lightning)
-- [Braidpool](#braidpool)
-- [Firebolt](#firebolt)
 - [BLAST](#blast)
+- [Scaling Lightning](#scaling-lightning)
+- [Satsigner](#satsigner)
+- [Firebolt](#firebolt)
+- [The Bitaxe](#the-bitaxe)
+- [The Bitcoin LARP Game](#the-bitcoin-larp-game)
+- [Braidpool](#braidpool)
 
 All of the above grants are sourced from our [General
 Fund](https://opensats.org/projects/general_fund), which is funded by generous
@@ -76,47 +76,20 @@ when working on improvements.
 Repository: [bitcoin/bitcoin](https://github.com/bitcoin/bitcoin) ([PRs](https://bitcoinacks.com/?flt0_author_contains=kevkevinpal))  
 License: MIT
 
-### Open-Source Bitcoin LARP Game
+### BLAST
 
-The world-famous Bitcoin LARP is a game designed to understand the inner
-workings of Bitcoin in a fun and interactive way. The goal of this project is to
-have open-source kits available to anyone that are easy to replicate, use, and
-set up.
+The “Big Lightning Automated Simulation Tool” (BLAST) is a modeling and
+simulation framework specifically designed for the Lightning Network. Acting as
+both a software library and a standalone tool, BLAST aims to facilitate the
+creation of accurate tests and simulations that replicate real-world Lightning
+Network behavior.
 
-Beyond just software and optimizing for the ability to make kits easy to build &
-distribute, all instructions and build kit information will be made available
-under permissive open-source licenses too.
+The primary objective of this project is to conduct research and development to
+devise an efficient representation of nodes and channels. This representation
+will enable the modeling of large networks while offering flexibility to
+customize necessary assumptions.
 
-Repository: [niftynei/BASIC](https://github.com/niftynei/BASIC)  
-License: GPL 3.0
-
-### Satsigner
-
-Satsigner is a mobile wallet that aims to give the user full control and
-visibility over what is happening to their sats at the protocol level. Most
-bitcoin wallets in use today use traditional designs and patterns that hide the
-underlying mechanics of the bitcoin protocol. While this trade-off might be
-appropriate for new users, failing to equip users with more meaningful and
-in-depth interfaces can hinder the acquisition of a deeper understanding of
-bitcoin. By focusing on the user experience problems from a bitcoiner’s
-perspective, the project hopes to develop native solutions for UTXO, fee,
-multisig, and key management.
-
-Repository: [satsigner/satsigner](https://github.com/satsigner/satsigner)  
-License: MIT
-
-### The Bitaxe
-
-The Bitaxe is the first ASIC bitcoin miner in nearly a decade with fully
-open-source hardware and firmware. The primary goal is to be a reference design
-that can be taken as is, scaled up, and/or adapted to solve specific bitcoin
-mining use cases. The design takes into consideration cost and ease of access to
-core components while remaining a competitive miner.
-
-Documentation on how to manufacture the device, program the firmware, and
-contribute is central to the project.
-
-Repository: [skot/bitaxe](https://github.com/skot/bitaxe)  
+Repository: [bjohnson5/blast](https://github.com/bjohnson5/blast)  
 License: GPL 3.0
 
 ### Scaling Lightning
@@ -134,19 +107,19 @@ a 3rd party's signet node such as to ask it to open a channel for you.
 Repository: [scaling-lightning/scaling-lightning](https://github.com/scaling-lightning/scaling-lightning)  
 License: MIT
 
-### Braidpool
+### Satsigner
 
-Braidpool is a decentralized bitcoin mining pool. Braidpool aims to ship an
-implementation working on signet with hashrate donated by interested miners. The
-project will also publish their specifications and engage the mining community
-for wider adoption of Braidpool.
+Satsigner is a mobile wallet that aims to give the user full control and
+visibility over what is happening to their sats at the protocol level. Most
+bitcoin wallets in use today use traditional designs and patterns that hide the
+underlying mechanics of the bitcoin protocol. While this trade-off might be
+appropriate for new users, failing to equip users with more meaningful and
+in-depth interfaces can hinder the acquisition of a deeper understanding of
+bitcoin. By focusing on the user experience problems from a bitcoiner’s
+perspective, the project hopes to develop native solutions for UTXO, fee,
+multisig, and key management.
 
-The Braidpool proposal builds upon Schnorr signatures and Taproot, as well as
-novel peer-to-peer research. Braidpool enables all miners to do their own block
-construction and miner payouts can not be blocked by a central authority like a
-pool operator.
-
-Repository: [pool2win/braidpool](https://github.com/pool2win/braidpool/)  
+Repository: [satsigner/satsigner](https://github.com/satsigner/satsigner)  
 License: MIT
 
 ### Firebolt
@@ -162,21 +135,50 @@ The wallet is still in beta and under heavy development. Use with caution.
 Repository: [AreaLayer/FireBolt](https://github.com/AreaLayer/FireBolt)  
 License: MIT
 
-### BLAST
+### The Bitaxe
 
-The “Big Lightning Automated Simulation Tool” (BLAST) is a modeling and
-simulation framework specifically designed for the Lightning Network. Acting as
-both a software library and a standalone tool, BLAST aims to facilitate the
-creation of accurate tests and simulations that replicate real-world Lightning
-Network behavior.
+The Bitaxe is the first ASIC bitcoin miner in nearly a decade with fully
+open-source hardware and firmware. The primary goal is to be a reference design
+that can be taken as is, scaled up, and/or adapted to solve specific bitcoin
+mining use cases. The design takes into consideration cost and ease of access to
+core components while remaining a competitive miner.
 
-The primary objective of this project is to conduct research and development to
-devise an efficient representation of nodes and channels. This representation
-will enable the modeling of large networks while offering flexibility to
-customize necessary assumptions.
+Documentation on how to manufacture the device, program the firmware, and
+contribute is central to the project.
 
-Repository: [bjohnson5/blast](https://github.com/bjohnson5/blast)  
+Repository: [skot/bitaxe](https://github.com/skot/bitaxe)  
 License: GPL 3.0
+
+### The Bitcoin LARP Game
+
+The world-famous Bitcoin LARP is a game designed to understand the inner
+workings of Bitcoin in a fun and interactive way. The goal of this project is to
+have open-source kits available to anyone that are easy to replicate, use, and
+set up.
+
+Beyond just software and optimizing for the ability to make kits easy to build &
+distribute, all instructions and build kit information will be made available
+under permissive open-source licenses too.
+
+Repository: [niftynei/BASIC](https://github.com/niftynei/BASIC)  
+License: GPL 3.0
+
+### Braidpool
+
+Braidpool is a decentralized bitcoin mining pool. Braidpool aims to ship an
+implementation working on signet with hashrate donated by interested miners. The
+project will also publish their specifications and engage the mining community
+for wider adoption of Braidpool.
+
+The Braidpool proposal builds upon Schnorr signatures and Taproot, as well as
+novel peer-to-peer research. Braidpool enables all miners to do their own block
+construction and miner payouts can not be blocked by a central authority like a
+pool operator.
+
+Repository: [pool2win/braidpool](https://github.com/pool2win/braidpool/)  
+License: MIT
+
+---
 
 We are evaluating applications based on carefully [defined
 criteria](https://opensats.org/apply#criteria) and we do our best to select only
@@ -188,4 +190,6 @@ without your help. If you want to help us cover our operational expenses, please
 consider donating to our [operations
 budget](https://opensats.org/projects/opensats_operations_budget).
 
-<center> <DonateToOperationsButton/> </center>
+<center>
+    <DonateToOperationsButton/>
+</center>
