Use relative links

--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -13,8 +13,8 @@ are working tirelessly to bring about a better future promised by sound and
 permissionless money. We are trying our best to help bring said future about by
 providing no-strings-attached funding for the most impactful open-source
 projects in the Bitcoin ecosystem, and we are planning to do this for many
-[more](https://opensats.org/blog/recurring-donations-from-bitwise-bitcoin-etf-bitb)
-[decades](https://opensats.org/blog/bitcoin-infrastructure-this-decade) to come.
+[more](/blog/recurring-donations-from-bitwise-bitcoin-etf-bitb)
+[decades](/blog/bitcoin-infrastructure-this-decade) to come.
 
 Our board has selected nine more projects for funding. In no particular order,
 here they are:
@@ -30,7 +30,7 @@ here they are:
 - [Braidpool](#braidpool)
 
 All of the above grants are sourced from our [General
-Fund](https://opensats.org/projects/general_fund), which is funded by generous
+Fund](/projects/general_fund), which is funded by generous
 donors like you. If you want to help us support free and open-source projects
 please consider donating to the fund:
 
@@ -41,16 +41,16 @@ please consider donating to the fund:
 ---
 
 This marks the fourth wave of grants given to bitcoin projects, following our
-announcements in [July](https://opensats.org/blog/bitcoin-grants-july-2023),
-[August](https://opensats.org/blog/bitcoin-and-nostr-grants-august-2023), and
-[December](https://opensats.org/blog/bitcoin-grants-december-2023). In case
+announcements in [July](/blog/bitcoin-grants-july-2023),
+[August](/blog/bitcoin-and-nostr-grants-august-2023), and
+[December](/blog/bitcoin-grants-december-2023). In case
 you’re interested in the types of projects and people we support, we encourage
 you to have a look at our [long-term support
-grants](https://opensats.org/tags/lts) as well as our [year in
-review](https://opensats.org/blog/2023-year-in-review).
+grants](/tags/lts) as well as our [year in
+review](/blog/2023-year-in-review).
 
 As always, let's take a closer look at the projects to understand what they are
-about and how they align with [our mission](https://opensats.org/mission).
+about and how they align with [our mission](/mission).
 
 ---
 
@@ -181,14 +181,14 @@ License: MIT
 ---
 
 We are evaluating applications based on carefully [defined
-criteria](https://opensats.org/apply#criteria) and we do our best to select only
-the [most impactful](https://opensats.org/selection) and promising proposals.
+criteria](/apply#criteria) and we do our best to select only
+the [most impactful](/selection) and promising proposals.
 
 Thank you for your continual and generous support. As we don't take a cut from
 donations to open-source projects, we couldn't be doing what we are doing
 without your help. If you want to help us cover our operational expenses, please
 consider donating to our [operations
-budget](https://opensats.org/projects/opensats_operations_budget).
+budget](/projects/opensats_operations_budget).
 
 <center>
     <DonateToOperationsButton/>
