--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -160,7 +160,7 @@ Beyond just software and optimizing for the ability to make kits easy to build &
 distribute, all instructions and build kit information will be made available
 under permissive open-source licenses too.
 
-Repository: [niftynei/BASIC](https://github.com/niftynei/BASIC)  
+Repository: [dni/](https://github.com/dni)[BASIC](https://github.com/niftynei/BASIC)  
 License: GPL 3.0
 
 ### Braidpool
