--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'bitcoin']
 draft: false
 authors: ['rob', 'dergigi']
 images: ['/static/images/blog/24-bitcoin-feb.jpg']
-summary: "OpenSats is funding 9 more open-source projects in the bitcoin space."
+summary: "OpenSats is funding 9 more open-source projects in the bitcoin ecosystem."
 ---
 
 As Bitcoin is approaching its next halving event, developers all over the world
