Add Warnet to SL entry

--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -100,11 +100,10 @@ environment for developers to build and develop their applications and services.
 Similar in concept to testnet faucets, `scaling-lightning` is a great tool for
 experimentation and learning.
 
-Easy routing allows individuals and companies to experiment and run signet
-nodes. An optional public API can allow participants to request interaction with
-a 3rd party's signet node such as to ask it to open a channel for you.
+A lot of the work is now being integrated into `warnet`, a monitoring
+tool that analyzes the emergent behavior of Bitcoin networks.
 
-Repository: [scaling-lightning/scaling-lightning](https://github.com/scaling-lightning/scaling-lightning)  
+Repository: [scaling-lightning/scaling-lightning](https://github.com/scaling-lightning/scaling-lightning) / [bitcoin-dev-project/warnet](https://github.com/bitcoin-dev-project/warnet)  
 License: MIT
 
 ### Satsigner
