--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -16,7 +16,7 @@ projects in the Bitcoin ecosystem, and we are planning to do this for many
 [more](/blog/recurring-donations-from-bitwise-bitcoin-etf-bitb)
 [decades](/blog/bitcoin-infrastructure-this-decade) to come.
 
-Our board has selected nine more projects for funding. In no particular order,
+Our board has selected eight more projects for funding. In no particular order,
 here they are:
 
 - [Splicing in LDK](#splicing-in-ldk)
