Slight re-word, use dash instead of paranthesis

--- a/data/blog/nostr-lts-long-term-support-for-nostr-developers.mdx
+++ b/data/blog/nostr-lts-long-term-support-for-nostr-developers.mdx
@@ -12,9 +12,9 @@ One of the things we are most proud of is the success of our [long-term support
 program](/tags/lts).  Launched just last year, the OpenSats LTS Grant program is
 supporting a dozen developers working on open-source freedom tech full-time.
 
-As nostr is moving from [experimental to substantial](/tags/nostr) (and if our
-hunch is right, eventually essential) we think it's time to include nostr devs
-in the group that is [load-bearing internet
+As nostr is moving from [experimental to substantial](/tags/nostr)—and if our
+hunch is right, from substantial to essential, eventually—we think it's time to
+include nostr devs in the group that is [load-bearing internet
 people](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors).
 
 The idea is simple: we want you to work on the freedom tech you're passionate
