--- a/data/blog/nostr-lts-long-term-support-for-nostr-developers.mdx
+++ b/data/blog/nostr-lts-long-term-support-for-nostr-developers.mdx
@@ -19,7 +19,7 @@ people](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
 
 The idea is simple: we want you to work on the freedom tech you're passionate
 about, without having to stress out about how to pay for food or rent every
-month. You did great work in the past, so we trust that you will do great work
+month. You did great work in the past, so we expect you to do great work
 in the future. You are free to work on any project, library, or protocol as you
 see fit, as long as it is bitcoin-only, free and open-source, and aligns with
 [our mission](/mission).
