--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -25,9 +25,13 @@ as in the internal and external processes of our organization.
 
 [ebl]: /docs/bylaws.pdf
 
-## Grants & Research
+## Grants & Reports
 
+- [List of Bitcoin Grants](/tags/bitcoin)
+- [List of Nostr Grants](/tags/nostr)
+- [List of LTS Grantees](/tags/lts)
 - [Grant Selection Process](/selection)
+- [EOY Report: 2023](/blog/2023-year-in-review)
 
 ## Ethics & Compliance
 
