--- a/data/pages/terms.mdx
+++ b/data/pages/terms.mdx
@@ -88,8 +88,8 @@ Some Content in our Site may be acquired from sources that prohibit further use 
 24. Contact Open Sats:
 
     Open Sats Initiative, Inc.  
-    2028 East Ben White Blvd, Suite 240-6969  
-    Austin, TX 78741  
+    12436 FM 1960 Rd West PMB #1003  
+    Houston, TX 77065  
 
     support@opensats.org
 
