--- a/data/pages/privacy.mdx
+++ b/data/pages/privacy.mdx
@@ -182,8 +182,8 @@ Only to the extent that Open Sats meets the minimum thresholds as required under
 If you have any questions about our practices or this Privacy Policy, please contact us at support@opensats.org, or write to us at:
 
     Open Sats Initiative, Inc.  
-    2028 East Ben White Blvd, Suite 240-6969  
-    Austin, TX 78741  
+    12436 FM 1960 Rd West PMB #1003  
+    Houston, TX 77065  
 
 ### Changes to the Privacy Policy
 
