Update postal address in /faq

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -66,8 +66,8 @@ The best way to communicate with us is via email:
 You can also write to us at:
 
     Open Sats Initiative, Inc.  
-    2028 East Ben White Blvd, Suite 240-6969  
-    Austin, TX 78741  
+    12436 FM 1960 Rd West PMB #1003  
+    Houston, TX 77065  
 
 ## How often are funding opportunities announced?
 
