Add update notice

--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -178,3 +178,15 @@ budget](/projects/opensats_operations_budget).
 <center>
     <DonateToOperationsButton/>
 </center>
+
+---
+
+<small>
+<i>Update: the original announcement listed one additional project which was
+later removed due to concerns regarding the quality and feasibility of the
+project. As mentioned in our <a href="/selection">grant selection process</a>,
+we monitor progress closely to ensure that every grant is achieving the intended
+outcomes and that the grantee is using funds responsibly. We reserve the right
+to pause or cancel grants at any time, if a certain level of quality or mission
+alignment is not met.</i>
+</small>
