Rename prop to generic `donationLink`

--- a/data/projects/bitcoindesign.mdx
+++ b/data/projects/bitcoindesign.mdx
@@ -4,6 +4,7 @@ dateAdded: '2023-03-10'
 summary: 'A free, open-source community resource for designers, developers, and others working on non-custodial bitcoin products.'
 nym: 'Christoph Ono'
 website: 'https://bitcoin.design/'
+donationLink: 'https://opencollective.com/bitcoin-design-foundation'
 coverImage: '/static/images/projects/bitcoindesign.jpg'
 git: 'https://github.com/BitcoinDesign'
 twitter: 'bitcoin_design'
