--- a/data/projects/btcpayserver.mdx
+++ b/data/projects/btcpayserver.mdx
@@ -4,6 +4,7 @@ dateAdded: '2022-09-22'
 summary: 'Start accepting Bitcoin payments with 0% processing fees & no third-party intermediary.'
 nym: 'BTCPay Server Foundation'
 website: 'https://btcpayserver.org/'
+donationLink: 'https://btcpayserver.org/donate/'
 coverImage: '/static/images/projects/btcpayserver.png'
 git: 'https://github.com/btcpayserver/btcpayserver'
 twitter: 'BtcpayServer'
