--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -4,6 +4,7 @@ dateAdded: '2022-12-24'
 summary: 'GrapheneOS is a private and secure mobile operating system with great functionality and usability. It has near full Android app compatibility via our sandboxed Google Play compatibility layer.'
 nym: 'GrapheneOS Foundation'
 website: 'https://grapheneos.org/'
+donationLink: 'https://grapheneos.org/donate'
 coverImage: '/static/images/projects/graphene.png'
 git: 'https://github.com/GrapheneOS'
 twitter: 'GrapheneOS'
