--- a/data/projects/tor.mdx
+++ b/data/projects/tor.mdx
@@ -4,6 +4,7 @@ dateAdded: '2022-12-30'
 summary: 'The Tor Project advances human rights and defends your privacy online through free software and open networks.'
 nym: 'The Tor Project'
 website: 'https://www.torproject.org/'
+donationLink: 'https://donate.torproject.org/'
 coverImage: '/static/images/projects/tor.svg'
 git: 'https://gitweb.torproject.org/'
 twitter: 'torproject'
