Add `showcase` filter

--- a/data/projects/tor.mdx
+++ b/data/projects/tor.mdx
@@ -11,6 +11,7 @@ twitter: 'torproject'
 zaprite: 'ZM5TmZ025mrJI8E1kFS5'
 btcpay: 'tor'
 tags: ['Privacy', 'Protocol']
+showcase: true
 ---
 
 ## About this project
