Fix tags & add to showcase

--- a/data/projects/btcpayserver.mdx
+++ b/data/projects/btcpayserver.mdx
@@ -12,6 +12,7 @@ personalTwitter: 'NicolasDorier'
 zaprite: 'of0LLGHM5cAGu4seVNNN'
 btcpay: 'btcpayserver'
 tags: ['Bitcoin', 'Lightning', 'Wallet', 'Node', 'Commerce', 'Infrastructure']
+showcase: true
 ---
 
 ## About this project
