--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -10,8 +10,9 @@ git: 'https://github.com/GrapheneOS'
 twitter: 'GrapheneOS'
 zaprite: 'F81LWN96IGmFHnvydSli'
 btcpay: 'grapheneos'
-tags: ['Bitcoin', 'Lightning', 'ecash']
+tags: ['Privacy', 'OS', 'Mobile']
 bonusUSD: 1000000
+showcase: true
 ---
 
 GrapheneOS is a private and secure mobile operating system for Android devices
