--- a/data/projects/stratumv2.mdx
+++ b/data/projects/stratumv2.mdx
@@ -2,7 +2,7 @@
 title: 'Stratum V2'
 dateAdded: '2023-03-16'
 summary: 'The next generation of pooled mining.'
-nym: 'Fi3'
+nym: 'StratumV2'
 website: 'https://stratumprotocol.org/'
 coverImage: '/static/images/projects/stratumv2.jpg'
 git: 'https://github.com/stratum-mining/stratum'
@@ -11,6 +11,7 @@ personalTwitter: 'StratumV2'
 zaprite: 'G9QKE1Dn6B56uOF8PSYX'
 btcpay: 'stratumv2'
 tags: ['Bitcoin', 'Privacy', 'Protocol', 'Mining']
+showcase: true
 ---
 
 ## About this project
