--- a/data/projects/amethyst.mdx
+++ b/data/projects/amethyst.mdx
@@ -8,7 +8,7 @@ coverImage: '/static/images/projects/amethyst.png'
 git: 'https://github.com/vitorpamplona/amethyst'
 twitter: 'lnp_bp'
 personalTwitter: 'lnp_bp'
-tags: ['Bitcoin', 'Lightning', 'Protocol']
+tags: ['Nostr', 'Mobile', 'Android']
 showcase: true
 ---
 
