Add BitcoinDesign to showcase

--- a/data/projects/bitcoindesign.mdx
+++ b/data/projects/bitcoindesign.mdx
@@ -10,6 +10,7 @@ git: 'https://github.com/BitcoinDesign'
 twitter: 'bitcoin_design'
 personalTwitter: 'GBKS'
 tags: ['Bitcoin', 'Design', 'UX']
+showcase: true
 ---
 
 ## About this project
