Add Zeus and Cashu to showcase

--- a/data/projects/cashu.mdx
+++ b/data/projects/cashu.mdx
@@ -8,6 +8,7 @@ coverImage: '/static/images/projects/cashu.jpeg'
 git: 'https://github.com/cashubtc'
 twitter: 'CashuBTC'
 tags: ['Bitcoin', 'Lightning', 'ecash']
+showcase: true
 ---
 
 ## About this project
