--- a/data/projects/zeus.mdx
+++ b/data/projects/zeus.mdx
@@ -9,6 +9,7 @@ git: 'https://github.com/ZeusLN/zeus'
 twitter: 'ZeusLN'
 personalTwitter: 'evankaloudis'
 tags: ['Wallet', 'Lightning']
+showcase: true
 ---
 
 ## About this project
