Add nostr npub to project data

--- a/data/projects/amethyst.mdx
+++ b/data/projects/amethyst.mdx
@@ -6,8 +6,8 @@ nym: 'Vitor Pamplona'
 website: 'https://play.google.com/store/apps/details?id=com.vitorpamplona.amethyst'
 coverImage: '/static/images/projects/amethyst.png'
 git: 'https://github.com/vitorpamplona/amethyst'
-twitter: 'lnp_bp'
-personalTwitter: 'lnp_bp'
+twitter: 'vitorpamplona'
+nostr: 'npub1gcxzte5zlkncx26j68ez60fzkvtkm9e0vrwdcvsjakxf9mu9qewqlfnj5z'
 tags: ['Nostr', 'Mobile', 'Android']
 showcase: true
 ---
