--- a/data/authors/arvin.mdx
+++ b/data/authors/arvin.mdx
@@ -10,14 +10,11 @@ github: https://github.com/Arvin21M
 volunteer: true
 ---
 
-Arvin's two-decade career in mortgage lending and financial technology
-cultivated a passion for empowering innovation. These experiences ignited his
-interest in combining emerging technologies with traditional systems to improve
-user experiences, driving Arvin to launch a fintech venture in
-2014, setting new standards in the mortgage industry.
+Arvin's two-decade career in consumer credit, finance, and technology
+cultivated a passion for empowering innovation.
 
 At his essence, Arvin is captivated by the transformative capabilities of
 Bitcoin and Nostr, viewing them as pivotal equalizers that are unlocking
-boundless human potential. Arvin devotes his time to volunteering at OpenSats,
-contributing towards a future where free and open-source software and protocols
-enable a more honest, equitable, and interconnected society.
+boundless human potential. Arvin devotes his time to contributing towards 
+a future where free and open-source software and protocols enable a more 
+honest, equitable, and interconnected society.
