--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -13,33 +13,16 @@ bonusUSD: 1000000
 showcase: true
 ---
 
-GrapheneOS is a private and secure mobile operating system for Android devices
-developed as a non-profit open-source project.
+GrapheneOS is a private and secure mobile operating system with a high level of usability comparable to mainstream Android devices. GrapheneOS focuses on the research and development of security, privacy and compatibility features, giving users the tools they need to protect their privacy even while using mainstream apps and services. GrapheneOS is compatible with nearly every Android app via its unique sandboxed Google Play compatibility layer. It provides substantial defenses, protecting devices against compromise by even sophisticated attackers. 
+Their work benefits billions of users as a result of their contributions to the Android Open Source Project (AOSP) and the Linux kernel.
 
-As a custom operating system, GrapheneOS improves the privacy and security of
-your phone. Built upon the Android Open Source Project (AOSP), it offers a solid
-base for privacy-conscious users. Rather than branding and marketing, GrapheneOS
-focuses on substance, meaning that security is paramount over unhelpful frills
-or third-party app choices.
+A list of features that GrapheneOS provides over AOSP can be found at: 
+https://grapheneos.org/features
 
-GrapheneOS offers increased protection from 0-day exploits and other
-vulnerabilities due to a reduced attack surface and hardened components.
+GrapheneOS supports devices meeting strict security requirements: 
+https://grapheneos.org/faq#supported-devices
 
-The core features that GrapheneOS offers its users are:
+A non-exhaustive list of requirements devices need to meet in order to be supported by GrapheneOS can be found here: 
+https://grapheneos.org/faq#future-devices
 
-- Exploit mitigations: hardened app runtime, secure application spawning system, hardened `libc` & a first-party hardened memory allocator, etc.
-- Improved sandboxing
-- Anti-persistence/detection
-
-Other valuable features include:
-
-- LTE-only mode
-- Wi-Fi privacy
-- Private screenshots
-- PIN scrambling
-- Privacy by default
-- Longer passwords
-
-The operating system is easy to install on most modern Pixel devices.[^fn-supported-devices]
-
-[^fn-supported-devices]: https://grapheneos.org/faq#supported-devices
+GrapheneOS can be installed on supported devices, including via a very easy to use web installer: https://grapheneos.org/install/
