Refactor Funds & clean up Project Listings (#236)
Co-authored-by: Lucas <81401034+lucasmogu@users.noreply.github.com>

--- a/data/projects/btcpayserver.mdx
+++ b/data/projects/btcpayserver.mdx
@@ -4,13 +4,13 @@ dateAdded: '2022-09-22'
 summary: 'Start accepting Bitcoin payments with 0% processing fees & no third-party intermediary.'
 nym: 'BTCPay Server Foundation'
 website: 'https://btcpayserver.org/'
+donationLink: 'https://btcpayserver.org/donate/'
 coverImage: '/static/images/projects/btcpayserver.png'
 git: 'https://github.com/btcpayserver/btcpayserver'
 twitter: 'BtcpayServer'
 personalTwitter: 'NicolasDorier'
-zaprite: 'of0LLGHM5cAGu4seVNNN'
-btcpay: 'btcpayserver'
 tags: ['Bitcoin', 'Lightning', 'Wallet', 'Node', 'Commerce', 'Infrastructure']
+showcase: true
 ---
 
 ## About this project
