--- a/data/projects/cashu.mdx
+++ b/data/projects/cashu.mdx
@@ -4,12 +4,12 @@ dateAdded: '2023-04-20'
 summary: 'Cashu brings near-perfect privacy for users of custodial Bitcoin applications by using a Chaumian ecash system.'
 nym: 'Calle'
 website: 'https://cashu.space/'
+donationLink: https://geyser.fund/project/cashu
 coverImage: '/static/images/projects/cashu.jpeg'
 git: 'https://github.com/cashubtc'
 twitter: 'CashuBTC'
-zaprite: '4GbA2gJpvuIM5IPuxTdr'
-btcpay: 'cashu'
 tags: ['Bitcoin', 'Lightning', 'ecash']
+showcase: true
 ---
 
 ## About this project
