--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -4,13 +4,13 @@ dateAdded: '2022-12-24'
 summary: 'GrapheneOS is a private and secure mobile operating system with a high level of usability comparable to mainstream Android devices.'
 nym: 'GrapheneOS Foundation'
 website: 'https://grapheneos.org/'
+donationLink: 'https://grapheneos.org/donate'
 coverImage: '/static/images/projects/graphene.png'
 git: 'https://github.com/GrapheneOS'
 twitter: 'GrapheneOS'
-zaprite: 'F81LWN96IGmFHnvydSli'
-btcpay: 'grapheneos'
-tags: ['Bitcoin', 'Lightning', 'ecash']
+tags: ['Privacy', 'OS', 'Mobile']
 bonusUSD: 1000000
+showcase: true
 ---
 
 GrapheneOS is a private and secure mobile operating system with a high level of usability comparable to mainstream Android devices. GrapheneOS focuses on the research and development of security, privacy and compatibility features, giving users the tools they need to protect their privacy even while using mainstream apps and services. GrapheneOS is compatible with nearly every Android app via its unique sandboxed Google Play compatibility layer. It provides substantial defenses, protecting devices against compromise by even sophisticated attackers. 
