--- a/data/projects/zeus.mdx
+++ b/data/projects/zeus.mdx
@@ -4,13 +4,13 @@ dateAdded: '2022-04-02'
 summary: 'Zeus is an open-source, non-custodial Bitcoin wallet that gives you full control over how you make payments.'
 nym: 'Evan Kaloudis'
 website: 'https://zeusln.app/'
+donationLink: 'https://docs.zeusln.app/contribute/donate/'
 coverImage: '/static/images/projects/zeus.png'
 git: 'https://github.com/ZeusLN/zeus'
 twitter: 'ZeusLN'
 personalTwitter: 'evankaloudis'
-zaprite: 'WhOWcKFUiFHFMVqaBhLD'
-btcpay: 'zeus'
 tags: ['Wallet', 'Lightning']
+showcase: true
 ---
 
 ## About this project
