Add BPI donation link

--- a/data/projects/bpi.mdx
+++ b/data/projects/bpi.mdx
@@ -4,6 +4,7 @@ dateAdded: '2022-09-22'
 summary: 'A think tank studying the future of money.'
 nym: 'Grant McCarty'
 website: 'https://www.btcpolicy.org/'
+donationLink: 'https://www.btcpolicy.org/donate'
 coverImage: '/img/project/bpi.png'
 git: 'https://github.com/BitcoinPolicyInstitute'
 twitter: 'btcpolicyorg'
