Add RGB donation link

--- a/data/projects/rgb.mdx
+++ b/data/projects/rgb.mdx
@@ -4,6 +4,7 @@ dateAdded: '2023-01-19'
 summary: 'RGB is a system of private & scalable client-validated smart contracts on the Bitcoin & Lightning networks. RGB is a digital rights management system.'
 nym: 'LNP/BP Standards Association'
 website: 'https://www.rgbfaq.com/'
+donationLink: 'https://geyser.fund/project/rgb'
 coverImage: '/static/images/projects/RGB_Logo.png'
 git: 'https://github.com/rgb-WG/'
 twitter: 'lnp_bp'
