Fix SeedSigner donation link

--- a/data/projects/seedsigner.mdx
+++ b/data/projects/seedsigner.mdx
@@ -4,7 +4,7 @@ dateAdded: '2022-12-29'
 summary: 'The goal of SeedSigner is to lower the cost and complexity of Bitcoin multi-signature wallet use. To accomplish this goal, SeedSigner offers anyone the opportunity to build a verifiably air-gapped, stateless Bitcoin signing device using inexpensive, publicly available hardware components (usually < $50).'
 nym: 'SeedSigner'
 website: 'https://seedsigner.com/'
-donationLink: https://seedsigner.com/donate-now/
+donationLink: 'https://seedsigner.com/donate-now/'
 coverImage: '/static/images/projects/seedsigner.jpeg'
 git: 'https://github.com/SeedSigner'
 twitter: 'seedsigner'
