Add SparrowWallet donation link

--- a/data/projects/sparrow_wallet.mdx
+++ b/data/projects/sparrow_wallet.mdx
@@ -4,6 +4,7 @@ dateAdded: '2022-04-02'
 summary: 'Sparrow is a desktop-only Bitcoin wallet for those who value financial self-sovereignty. Sparrow’s emphasis is on security, privacy, and usability. Sparrow does not hide information from you - on the contrary, it attempts to provide as much detail as possible about your transactions and UTXOs, but in a way that is manageable and usable.'
 nym: 'Craig Raw'
 website: 'https://sparrowwallet.com'
+donationLink: 'https://www.sparrowwallet.com/donate/'
 coverImage: '/static/images/projects/sparrow.png'
 git: 'https://github.com/sparrowwallet/sparrow'
 twitter: 'SparrowWallet'
