Add Thunderhub donation link

--- a/data/projects/thunderhub.mdx
+++ b/data/projects/thunderhub.mdx
@@ -4,6 +4,7 @@ dateAdded: '2022-04-02'
 summary: 'Monitor and manage your node from any browser and any device.'
 nym: 'Anthony Potdevin'
 website: 'https://thunderhub.io/'
+donationLink: 'https://github.com/sponsors/apotdevin'
 coverImage: '/static/images/projects/thunderhub.png'
 git: https://github.com/apotdevin/thunderhub
 twitter: 'thunderhubio'
