--- a/data/projects/zeus.mdx
+++ b/data/projects/zeus.mdx
@@ -10,7 +10,7 @@ git: 'https://github.com/ZeusLN/zeus'
 twitter: 'ZeusLN'
 personalTwitter: 'evankaloudis'
 tags: ['Wallet', 'Lightning']
-showcase: true
+showcase: false
 ---
 
 ## About this project
