Fix link to Nostur mission

--- a/data/blog/nostr-grants-october-2023.mdx
+++ b/data/blog/nostr-grants-october-2023.mdx
@@ -86,7 +86,7 @@ License: AGPL-3.0
 to be simple to use for Mac, iPhone, and iPad users. It supports multiple
 accounts, has nsecBunker support, and imposter detection features. Nostur is
 opinionated in its
-[mission](https://blogstack.io/naddr1qq8xummnw36hyttdd9ehx6t0dcq3gamnwvaz7tmjv4kxz7fwv3sk6atn9e5k7q3qn0sturny6w9zn2wwexju3m6asu7zh7jnv2jt2kx6tlmfhs7thq0qxpqqqp65w8jxczy)
+[mission](https://njump.me/naddr1qq8xummnw36hyttdd9ehx6t0dcq3gamnwvaz7tmjv4kxz7fwv3sk6atn9e5k7q3qn0sturny6w9zn2wwexju3m6asu7zh7jnv2jt2kx6tlmfhs7thq0qxpqqqp65w8jxczy)
 and uses Apple-native features such as iCloud to onboard as many users to nostr
 as possible. You can find a complete [feature list](https://nostur.com/) as well
 as an installation link on [nostur.com](https://nostur.com/).
