--- a/data/projects/bitcoin-core.mdx
+++ b/data/projects/bitcoin-core.mdx
@@ -6,6 +6,7 @@ nym: 'Bitcoin Core Developers'
 website: 'https://bitcoincore.org/en/download/'
 coverImage: '/static/images/projects/bitcoin-core.png'
 git: 'https://github.com/bitcoin/bitcoin'
+twitter: 'https://twitter.com/bitcoincoreorg'
 tags: ['Bitcoin']
 showcase: true
 ---
