Update repo links & descriptions

--- a/data/blog/stuart-bowman-receives-lts-grant.mdx
+++ b/data/blog/stuart-bowman-receives-lts-grant.mdx
@@ -24,9 +24,10 @@ this will expand the network's capabilities and increase its value and activity.
 Stuart will continue to work on the Satellite Stack and related components, such
 as:
 
-- [Satellite Node](https://github.com/lovvtide/satellite-node): A nostr node with enhanced relay capabilities, providing a dedicated backend for communities.
-- [Satellite Control](https://github.com/lovvtide/satellite-control): A control panel that allows non-technical users to operate their relay and media archive.
-- [Satellite Desktop](https://github.com/lovvtide/satellite-desktop): A cross-platform desktop app to easily run satellite nodes on consumer hardware.
+- [Satellite Public Node](https://github.com/satellite-earth/public-node): A dedicated nostr relay and Blossom server for a community.
+- [Satellite Private Node](https://github.com/satellite-earth/private-node): A local and private mirror that backs up all your data, providing high availability and low latency.
+- [Satellite Dashboard](https://github.com/satellite-earth/dashboard-ui): A control panel that allows non-technical users to operate their Satellite Private Node.
+- [Satellite Desktop](https://github.com/satellite-earth/desktop): A cross-platform desktop app to easily run satellite nodes on consumer hardware.
 - [Satellite CDN](https://github.com/lovvtide/satellite-cdn): A Blossom-compatible CDN server that handles media uploads, downloads, user authentication, and file indexing.
 
 > The Satellite stack will enable communities and organizations on nostr to be
