--- a/data/blog/stuart-bowman-receives-lts-grant.mdx
+++ b/data/blog/stuart-bowman-receives-lts-grant.mdx
@@ -26,7 +26,7 @@ as:
 
 - [Satellite Public Node](https://github.com/satellite-earth/public-node): A dedicated nostr relay and Blossom server for a community.
 - [Satellite Private Node](https://github.com/satellite-earth/private-node): A local and private mirror that backs up all your data, providing high availability and low latency.
-- [Satellite Dashboard](https://github.com/satellite-earth/dashboard-ui): A control panel that allows non-technical users to operate their Satellite Private Node.
+- [Satellite Dashboard](https://github.com/satellite-earth/dashboard-ui): A control panel that allows non-technical users to operate their Satellite Node(s).
 - [Satellite Desktop](https://github.com/satellite-earth/desktop): A cross-platform desktop app to easily run satellite nodes on consumer hardware.
 - [Satellite CDN](https://github.com/lovvtide/satellite-cdn): A Blossom-compatible CDN server that handles media uploads, downloads, user authentication, and file indexing.
 
